# C2Q

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  REQUIREMENTS.md  STATUS.md  main.py  pyproject.toml  pytest.ini  recommender.py  requirements-artifact.txt  requirements-core.txt  requirements-dev.txt  requirements-lock.txt  requirements-parser.txt  requirements-recommender.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
QAOA/: QAOA_Ising.ipynb  QAOA_Ising.py
VQE/: VQE.ipynb  VQE.py
docs/: CLAIMS_MAP.md  RCR_DRAFT.md
scripts/: artifact_smoke.py  recommender_maxcut_pipeline.py
src/: circuits_library.py  graph.py  json_engine.py  recommender.py  reduction.py  report.py  sat_to_qubo.py
src/GAS/: Grover_Adaptive_Search.ipynb
src/QAOA/: QAOA.ipynb  QAOA.py  QAOA_Ising.py
src/algorithms/: grover.py
src/algorithms/GAS/: Grover_Adaptive_Search.ipynb
src/algorithms/QAOA/: QAOA.py
src/algorithms/VQE/: VQE.ipynb  VQE.py
src/c2q-dataset/: LICENSE  MANIFEST.csv  README.md  checksums.txt
src/c2q-dataset/code_validation/: algorithmic_structural_level_validation.py
src/c2q-dataset/code_validation/diversity_out/: algorithm_diversity_summary.csv  algorithm_family_by_tag.csv  algorithm_family_per_instance.csv  algorithm_signals_per_instance.csv  buckets_by_tag.csv  failures_summary.csv  metrics_per_instance.csv  raw_vs_kept_by_tag.csv  summary_by_tag.csv  uniqueness_by_tag.csv
src/c2q-dataset/inputs/json/add/: add_01.json  add_02.json  add_03.json  add_05.json  add_06.json  add_07.json  add_08.json  add_09.json  add_10.json
src/c2q-dataset/inputs/json/clique/: clique_02.json  clique_03.json  clique_04.json  clique_05.json  clique_06.json  clique_07.json  clique_08.json  clique_09.json
src/c2q-dataset/inputs/json/factor/: factor_02.json  factor_05.json
src/c2q-dataset/inputs/json/kcolor/: kcolor_01.json  kcolor_02.json  kcolor_03.json  kcolor_04.json  kcolor_05.json  kcolor_06.json  (+4 more)
src/c2q-dataset/problem_examples_usability/: add.py  factor.py  factor_grover.py  kcolor.py  maxcut_qaoa.py  maxcut_vqe.py  mis_grover.py  vertex_cover.py
src/c2q-dataset/usability/: c2q_example.py
src/c2q-dataset/usability_comparision/: usability_comparision.py
src/c2q-dataset/usability_comparision/problem_examples_usability/: maxcut_vqe.py
src/c2q-dataset/usability_comparison/: usability_comparision.py
src/c2q-dataset/usability_comparison/problem_examples_usability/: VC_vqe.py  add_full.py  clique_qaoa.py  mul_qft.py  sub_full.py  tsp_qaoa.py
src/generator/: generator.py
src/parser/: algorithmic_structural_level_validation.py  data.csv  data2.csv  data3.csv  extra_data.csv  main.py  parser.py  parser_train_results_12_1.ipynb  parser_train_results_legacy.ipynb  python_programs.csv  train.ipynb  validate_dataset.py
src/parser/data/add/: add_04.json
src/parser/data/clique/: clique_01.json  clique_10.json
src/parser/data/maxcut/: maxcut_07.json  maxcut_10.json
src/parser/data/mis/: mis_03.json  mis_04.json  mis_07.json
src/parser/data/mul/: mul_01.json  mul_07.json
src/parser/data/sub/: sub_04.json  sub_07.json
src/parser/data/tsp/: tsp_02.json
src/parser/data/vc/: vc_03.json  vc_08.json
src/problem_examples/: clique.py  maxcut.py  mis.py  mul.py  sub.py  tsp.py
src/problems/: Three_SAT.py  base.py  clique.py  factorization.py  independent_set.py  kcolor.py  max_cut.py  maximal_independent_set.py  minimum_vertex_cover.py  np_complete.py  np_problems.py  problem.py  problems.py  qubo.py  tsp.py
src/problems/basic_arithmetic/: addition.py  arithmetic.py  multiplication.py  subtraction.py  utils.py
src/problems/tests/: test_report_helpers.py  tests.py
src/qiskit_examples/: amplitude_estimation.py  chemistry_vqe.py  error_correction.py  factoring_shor.py  fourier_transform_qft.py  linear_algebra_hhl.py  machine_learning_vqc.py  mis_grover.py  optimization_qaoa.py  search_grover.py  teleportation.py
src/recommender/: recommender.py  recommender_engine.py
src/recommender/coupling_maps/: ibm_eagle_coupling_map.npy  ionq_aria_coupling_map.npy  iqm_garnet_coupling_map.npy  iqm_helmi_coupling_map.npy  quantinuum_h1_coupling_map.npy  quera_aquila_coupling_map.npy  rigetti_ankaa2_coupling_map.npy  rigetti_ankaa_9q_3_coupling_map.npy
src/recommender/device_information/: IQM Garnet.pkl  IonQ Aria (Amazon).pkl  ibm_brisbane.pkl  ibm_kyiv.pkl  ibm_sherbrooke.pkl
src/reports/: data.csv
src/reports/helmi/: helmi_report_information.ipynb  helmi_test.py  job.sh
src/reports/helmi/data/: qaoa_counts.pkl  qaoa_dict_saved.pkl
src/reports/helmi/problems/: maximal_independent_set.py
src/reports/simulation/: simulation_report_information.ipynb
src/reports/simulation/data/: grover_counts.pkl  qaoa_counts.pkl  qaoa_dict_saved.pkl  vqe_counts.pkl  vqe_dict_saved.pkl
src/tests/: 3sat_report_with_latex.pdf.aux  3sat_report_with_latex.pdf.tex  conftest.py  diversity_validation_revision_2nd.py  ex2_test.py  ex2_test_1.py  generate_tests.py  test_c2q.py  tests.ipynb  tests.py  tests1.py  tests_load_dataset.py  tests_recommender.py  tests_recommender_maxcut.py  tests_reports.py
src/tests/generated_cases/maxcut/: maxcut_1.json  maxcut_10.json  maxcut_2.json  maxcut_3.json  maxcut_4.json  maxcut_5.json  maxcut_6.json  maxcut_7.json  maxcut_8.json  maxcut_9.json
src/tests/generated_cases/mis/: mis_1.json  mis_10.json  mis_2.json  mis_3.json  mis_4.json  mis_5.json  mis_6.json  mis_7.json  mis_8.json  mis_9.json
src/tests/json_cases/mis/: mis_1.json
src/tests/unit/: test_optional_dependency_fallbacks.py  test_recommender_metadata_fallback.py  test_sat_to_3sat.py
src/validation/: diversity_validation.py  implementation_validation.py
tools/: doctor.py  model_checksums.json  reproduce_paper.py  setup_model.py
(+149 files in other folders)
