[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2q-framework"
version = "0.1.1"
description = "C2|Q: Classical-to-Quantum software development framework"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  {name = "C2Q Team"}
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/C2-Q/C2Q"
Repository = "https://github.com/C2-Q/C2Q"
Documentation = "https://github.com/C2-Q/C2Q#readme"
Issues = "https://github.com/C2-Q/C2Q/issues"

[project.scripts]
c2q-json = "src.json_engine:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.pkl", "*.npy", "*.json", "*.csv", "*.txt", "*.png"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
